Fixing works on mobile

--- a/site/components/project/thumb/--hover/thumb--hover.scss
+++ b/site/components/project/thumb/--hover/thumb--hover.scss
@@ -1,5 +1,7 @@
 @mixin thumb--hover {
   @include mobile {
+    overflow-x: hidden;
+    
     figure {
       @include transition(transform);
     }
