--- a/site/components/project/thumb/--mobile/thumb--mobile.scss
+++ b/site/components/project/thumb/--mobile/thumb--mobile.scss
@@ -13,6 +13,8 @@
     }
 
     .thumb__image {
+      align-self: center;
+      
       figure {
         padding: $lem;
 
